tests/fixtures/invalid/pow_list_bool_list.py
# Cannot call pow() with List[int], Bool, List[int]
x = pow([1, 2, 3], True, [1, 2, 3])
